--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/font-awesome/css/font-awesome.min.css"  
+
             ],
             "scripts": []
           },
