--- a/angular.json
+++ b/angular.json
@@ -31,11 +31,14 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "./node_modules/font-awesome/css/font-awesome.min.css"  
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/font-awesome/css/font-awesome.min.css" ,
+              "src/styles.scss"
 
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
