--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "save": "^2.4.0",
     "tslib": "^2.3.0",
