--- a/angular.json
+++ b/angular.json
@@ -36,8 +36,10 @@
               "src/styles.scss"
 
             ],
-            "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            "scripts": [     
+              "./node_modules/jquery/dist/jquery.min.js",  
+              "./node_modules/popper.js/dist/umd/popper.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
