--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "save": "^2.4.0",
